--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,37 @@
-django
-djangorestframework
-django-widget-tweaks
-bootstrap4
+appdirs==1.4.3
+asgiref==3.2.3
+beautifulsoup4==4.9.1
+certifi==2019.11.28
+chardet==3.0.4
+cycler==0.10.0
+distlib==0.3.0
+dj-database-url==0.5.0
+Django==3.0.3
+django-bootstrap4==1.1.1
+django-filter==2.2.0
+django-heroku==0.3.1
+django-tailwind==0.7.1
+django-widget-tweaks==1.4.8
+djangorestframework==3.11.0
+filelock==3.0.12
+gunicorn==20.0.4
+idna==2.9
+kiwisolver==1.2.0
+matplotlib==3.2.1
+numpy==1.18.4
+Pillow==7.0.0
+pipenv==2018.11.26
+psycopg2==2.8.5
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2019.3
+requests==2.23.0
+six==1.14.0
+soupsieve==2.0.1
+sqlparse==0.3.1
+urllib3==1.25.8
+virtualenv==20.0.5
+virtualenv-clone==0.5.3
+virtualenvwrapper-win==1.2.6
+whitenoise==5.0.1
+yapf==0.30.0
